# amt

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  codecov.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
corpus/: sources.yaml
docs/superpowers/: turing-voice-guide.md
docs/superpowers/plans/: 2026-06-24-archive-sourcing.md  2026-06-24-virtual-turing-vertical-slice.md  2026-06-25-amt-cli.md  2026-06-25-typer-cli-refactor.md
docs/superpowers/specs/: 2026-06-24-archive-sourcing-design.md  2026-06-24-virtual-turing-design.md  2026-06-25-amt-cli-design.md  2026-06-25-persona-sourcing-methodology.md  2026-06-25-typer-cli-refactor-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts
src/turing/api/: app.py  config.py
src/turing/cli/: cmd_chat.py  cmd_personas.py  cmd_source.py  main.py
src/turing/core/: chat.py  personas.py  provider.py
src/turing/personas/: base.md  build-personas.yaml  colleague.md  personas.yaml  public.md  student.md
src/turing/sourcing/: __main__.py  browser.py  (+6 more)
tests/: test_api.py  test_chat.py  test_config.py  test_live_gemini.py  test_live_sourcing.py  test_personas.py  test_provider.py  test_smoke.py
tests/cli/: test_build_personas_config.py  test_cmd_chat.py  test_cmd_personas.py  test_cmd_source.py  test_main.py
tests/sourcing/: test_browser.py  test_cli.py  test_corpus.py  test_metadata.py  test_models.py  test_pipeline.py  test_resolver.py  test_transcriber.py
tools/: run.sh  source.sh
(+1 files in other folders)
